<resources>
    <string name="app_name">Adamo</string>
    <string name="todo1">TODO</string>
    <string name="songtitle">SongTitle</string>
    <string name="todo2">TODO</string>
    <string name="artist">Artist</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="prev">PREV</string>
    <string name="play">PLAY</string>
    <string name="next">NEXT</string>
    <string name="todo" />
    <string name="start_time">0:00</string>
    <string name="stop_time">0:30</string>

    <string name="song_title">Song Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logintext">Login</string>
    <string name="Logintext">LOGIN</string>
    <string name="usernametext">username</string>
    <string name="passwordtext">password</string>
    <string name="signuptext">SIGN UP</string>
    <string name="fullnametext">Full name</string>
    <string name="emailtext">email</string>
    <string name="usernametextt">username</string>
    <string name="loginheretext">Already have an account? CLICK HERE</string>
    <string name="signupheretextt">Dont have an account? CLICK HERE</string>
</resources>