<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".PlaySongActivity">

    <ImageView
        android:id="@+id/imgCoverArt"
        android:layout_width="350dp"
        android:layout_height="299dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />


    <TextView
        android:id="@+id/txtSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="SongTitle"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCoverArt" />

    <TextView
        android:id="@+id/txtArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Artist"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtSongTitle" />

    <Button
        android:id="@+id/btnPrevious"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/ic_baseline_skip_previous_24"
        android:onClick="playPrevious"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPlayPause"
        app:layout_constraintTop_toTopOf="@+id/btnPlayPause"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/ic_baseline_skip_next_24"
        android:onClick="playNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPlayPause"
        app:layout_constraintTop_toTopOf="@+id/btnPlayPause"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@id/btnPlayPause"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/ic_baseline_play_circle_24"
        android:onClick="playOrPauseMusic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek1"
        app:layout_constraintVertical_bias="0.351" />

    <SeekBar
        android:id="@+id/seek1"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtArtist" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/ic_baseline_playlist_add_24"
        android:onClick="addToPlaylist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VectorDrawableCompat" />

    <Button
        android:id="@+id/repeatBtn"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/ic_baseline_repeat_24"
        android:onClick="repeatSong"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnNext"
        app:layout_constraintTop_toTopOf="@+id/btnNext"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/shuffleBtn"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/ic_baseline_shuffle_24"
        android:onClick="shuffleSong"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPrevious"
        app:layout_constraintTop_toTopOf="@+id/btnPrevious"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/start_time"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/seek1"
        app:layout_constraintTop_toTopOf="@+id/seek1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:text="@string/stop_time"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/seek1"
        app:layout_constraintTop_toTopOf="@+id/seek1"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>